--- a/themes/tella/assets/css/style.css
+++ b/themes/tella/assets/css/style.css
@@ -58,7 +58,6 @@ body {
   /* 1 */
   line-height: inherit;
   /* 2 */
-  background-color: rgb(196, 249, 198);
 }
 
 /*
@@ -68,68 +67,11 @@ body {
 */
 
 
-/* contact form styling
- */
-.contact-form{
-  background-color: rgb(16, 15, 15);
-  border-radius: 25px;
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: .1em;
-  margin-right: 1em;
-  
-}
-.contact-form input{
-  background-color: rgb(121, 121, 125);
-  border-radius: 6px;
-  color: white;
-  margin-top: 1em;
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-/* button animation */
-.contact-form button{
-  display: block;
-  border: 1px solid black; 
-  border-radius: 15%;
-  background-color: rgb(4, 6, 159);
-  color: white;
-  margin-left: 50%;
-  margin-right: 50%;
-
-}
-
-/* button animation end */
 
 
 
-/* Thread in vitality homepage heading */
-
-.cup h1{
-  font-size: 5em;
-  text-align: center;
-  color: rgb(5, 12, 5);
-}
-.cup {
-  width: 100%;
-  height: 20%;
-  border-radius: 15px;
-  background: url(https://image.ibb.co/fmHm66/wave.png);
-  background-position: 0px 350px;
-  background-repeat: repeat-x;
-  /* animation: filling 10s ease-in infinite; */
-  animation: filling ease-in-out infinite;
-  animation-duration: 5s;
-  
-
-}
 
 
-@keyframes filling {
-  50% {background-position: 3000px 0px;}
-  100% {background-position: 6000px 350px;}
-}
-/* home page headline end */
 
 
 
@@ -1463,6 +1405,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+  font-weight: 500;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .text-black {
